# liva-lang

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  build.sh  build_clang.bat  build_msvc.bat  plan.md  roadmap.md  status.md
.github/workflows/: ci.yml  release.yml
cmake/: ClangMSVC.cmake  CompilerFlags.cmake  GoogleTest.cmake  LLVM.cmake
docs/en/: API-REFERENCE.md  CONTRIBUTING.md  COOKBOOK.md  DEBUGGING-GUIDE.md  LANGUAGE-REFERENCE.md  PERFORMANCE-GUIDE.md  PLUGIN-GUIDE.md  README.md  TUTORIAL.md
docs/superpowers/plans/: 2026-05-02-generator-yield-runtime.md  2026-05-10-hash-family.md  2026-05-10-hashable-builtin.md  2026-05-10-iterator-protocol.md  2026-05-11-btree-runtime.md  2026-05-31-ui-vcl-phase1.md  2026-06-01-ui-vcl-phase2-menu.md  2026-06-02-ui-vcl-phase3-widgets.md  2026-06-02-ui-vcl-phase4-align-anchors.md  2026-06-02-ui-vcl-phase5-data-binding.md  2026-06-02-ui-vcl-phase6-collection-binding.md  2026-06-03-postgres-sqlite-db-layer.md  2026-06-03-typed-db-accessors.md  2026-06-04-json-parse-tree-redesign.md  2026-06-04-net-http-redesign.md  2026-06-05-websocket-redesign.md  2026-06-15-ui-vcl-phase6.1-list-readback.md  2026-07-23-drop-move-tracking.md  2026-07-23-irgencall-split.md  2026-07-23-nil-coalesce-general.md  2026-07-23-pattern-ast.md  2026-07-23-pattern-types.md  2026-07-23-runtime-abi-def.md  2026-07-23-typechecker-call-split.md  2026-07-24-map-cli.md  2026-07-24-nested-dynarray.md  2026-07-24-stdlib-examples.md  2026-07-24-werror-fixture-hardfail.md
docs/tr/: API-REFERENCE.md  CONTRIBUTING.md  COOKBOOK.md  DEBUGGING-GUIDE.md  LANGUAGE-REFERENCE.md  PERFORMANCE-GUIDE.md  PLUGIN-GUIDE.md  README.md  TUTORIAL.md
editors/emacs/: README.md  liva-mode.el
editors/jetbrains/: README.md  liva.tmLanguage.json
editors/jetbrains/native-plugin/: .gitignore  (+3 more)
editors/neovim/: README.md
editors/notepadpp/: README.md  liva-udl.xml
examples/: README.md  array_methods.liva  array_test.liva  associated_values.liva  async_example.liva  benchmark_demo.liva  break_continue.liva  capture_ref.liva  classes.liva  cli_demo.liva  closures.liva  collections.liva  comptime_demo.liva  concurrency_demo.liva  control_flow.liva  cross_compile_demo.liva  crypto_jwt_demo.liva  csv_demo.liva  db_unified_demo.liva  default_args.liva  dyn_protocol_demo.liva  enum_match.liva  error_handling.liva  ffi_demo.liva  fibonacci.liva  for_collections.liva  generics.liva  hello.liva  higher_order.liva  http_demo.liva  io_demo.liva  json_demo.liva  macro_demo.liva  map_demo.liva  map_set_demo.liva  math.liva  math_demo.liva  module_main.liva  optional_chaining.liva  ownership.liva  (+38 more)
packaging/: liva.rb  wix_path_patch.xml
playground/: README.md  index.html
scripts/: benchmark-check.sh
src/AST/: ASTNode.cpp  ASTPrinter.cpp  Decl.cpp  Expr.cpp  Pattern.cpp  Stmt.cpp  Type.cpp
src/CodeGen/: CodeGen.cpp  TargetInfo.cpp
src/Common/: Diagnostics.cpp  JSON.cpp  SourceLocation.cpp
src/DAP/: DAPInterpreter.cpp  DAPServer.cpp
src/Driver/: BuildCache.cpp  CompilerInstance.cpp  Driver.cpp  Formatter.cpp  Linter.cpp  PackageManager.cpp  ProjectConfig.cpp  SemaCache.cpp  main.cpp
src/IR/: IRGen.cpp  IRGenCall.cpp  IRGenCallConcurrency.cpp  IRGenCallCore.cpp  IRGenCallData.cpp  IRGenCallMethod.cpp  IRGenCallNet.cpp  IRGenCallString.cpp  IRGenCallSys.cpp  IRGenCallUI.cpp  IRGenDecl.cpp  IRGenExpr.cpp  IRGenMono.cpp  IRGenStmt.cpp  RuntimeFunctions.def
src/JIT/: JITEngine.cpp
src/LSP/: LSPServer.cpp
src/Lexer/: Lexer.cpp  Token.cpp
src/Macro/: MacroExpander.cpp
src/Parser/: ParseDecl.cpp  ParseExpr.cpp  ParseStmt.cpp  ParseType.cpp  Parser.cpp
src/Plugin/: BuiltinPlugins.cpp  PluginRegistry.cpp
src/REPL/: LineEditor.cpp  REPL.cpp
src/Sema/: LifetimeAnalysis.cpp  ModuleLoader.cpp  OwnershipChecker.cpp  Scope.cpp  Sema.cpp  TypeChecker.cpp  TypeCheckerCall.cpp
stdlib/async/: async.liva
stdlib/cli/: cli.liva
stdlib/collections/: btree.liva  collections.liva
stdlib/convert/: convert.liva
stdlib/core/: hashable.liva  iterator.liva  option.liva  result.liva  string.liva  types.liva
stdlib/crypto/: crypto.liva
stdlib/csv/: csv.liva
stdlib/db/: db.liva
stdlib/encoding/: encoding.liva
stdlib/errors/: errors.liva
stdlib/fs/: fs.liva
stdlib/http/: http.liva
stdlib/io/: io.liva  print.liva
stdlib/json/: json.liva
stdlib/jwt/: jwt.liva
stdlib/log/: log.liva
stdlib/math/: math.liva
stdlib/net/: net.liva
stdlib/os/: os.liva
stdlib/path/: path.liva
stdlib/postgres/: postgres.liva
stdlib/random/: random.liva
stdlib/regex/: regex.liva
stdlib/runtime/: runtime.cpp  runtime.h
stdlib/sqlite/: sqlite.liva
stdlib/stream/: stream.liva
stdlib/strings/: strings.liva
stdlib/sync/: sync.liva
stdlib/testing/: testing.liva
stdlib/time/: time.liva
stdlib/toml/: toml.liva
stdlib/ui/: animation.liva  composite.liva  dragdrop.liva  focus.liva  layout.liva  listview.liva  menu.liva  router.liva  theme.liva  tooltip.liva  types.liva  ui_runtime.c  ui_runtime.h  widgets.liva  wx_runtime.cpp  wx_runtime.h
stdlib/websocket/: websocket.liva
tests/: CMakeLists.txt
tests/bench/: Benchmark.cpp
tests/error/: break_outside_loop.liva  immutable_assign.liva  undefined_var.liva  use_after_move.liva
tests/fuzz/: LexerFuzz.cpp  ParserFuzz.cpp  SemaFuzz.cpp
tests/fuzz/corpus/: array.liva  closure.liva  enum.liva  for_loop.liva  generic.liva  macro.liva  match.liva  nested.liva  operators.liva  protocol.liva  struct.liva  unicode.liva  variables.liva
tests/integration/: arithmetic.liva  functions.liva  hello.liva  if_else.liva  variables.liva  while_loop.liva
tests/unit/: BenchmarkTest.cpp  CodeGenTest.cpp  DAPTest.cpp  DiagColorTest.cpp  ExamplesTest.cpp  HashableProtocolTest.cpp  IncrementalBenchmarkTest.cpp  IntegrationTest.cpp  IteratorProtocolTest.cpp  LSPTest.cpp  LexerTest.cpp  MacroTest.cpp  OwnershipTest.cpp  ParserTest.cpp  PluginTest.cpp  ProjectConfigTest.cpp  PropertyTest.cpp  REPLTest.cpp  RuntimeExecTest.cpp  SelfHostTest.cpp  SemaTest.cpp  StdlibModuleTest.cpp  TypeTest.cpp  UICodegenExecTest.cpp  UIModuleTest.cpp
(+101 files in other folders)
